# wayscope

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
nix/: hm-module.nix
src/: cli.rs  command.rs  config.rs  init.rs  main.rs  output.rs  profile.rs
