[package]
name = "wayscope"
version = "0.1.0"
edition = "2021"
description = "Profile-based gamescope wrapper for gaming on Linux"
license = "MIT"
repository = "https://github.com/tophc7/wayscope"
keywords = ["gamescope", "gaming", "linux", "wayland", "hdr"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "wayscope"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
owo-colors = "4"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
